k8s/mailihog/mailhog-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name:  mailhog-deployment
  namespace: default
  labels:
    app: mailhog
spec:
  selector:
    matchLabels:
      app: mailhog
  replicas: 1
  template:
    metadata:
      labels:
        app: mailhog
    spec:
      containers:
        - name: mailhog
          image: mailhog/mailhog:v1.0.1          
          resources:
            requests:
              cpu: 200m
              memory: 256Mi
            limits:
              cpu: 1000m
              memory: 512Mi
          ports:
            - containerPort: 1025 # SMTP port
            - containerPort: 8025 # HTTP UI port
